--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         
     </head>
     <body>
-        <div style="width: 35%; margin: auto;">
+        <div style="width: 35%; margin: auto; padding-top: 100px;">
             <textarea id='text' style='width: 100%; border: solid 3px #e4e4e4;'></textarea></div>
           
         <div class='container'>
